--- a/src/index.css
+++ b/src/index.css
@@ -8,43 +8,33 @@ html {
   background-color: hsla(200,40%,30%,.4);
   color: white;
   background-image:   
-    url('https://www.pngall.com/wp-content/uploads/2016/03/Cloud-PNG-2.png'),
     url('https://uncnews.unc.edu/wp-content/uploads/sites/933/2020/11/shutterstock_264839402-scaled.jpg');
   background-repeat: repeat-x;
   background-position: 
-    0 50%,
     0 20%;
   background-size: 
-    50%,
     2880px 1800px;
   animation: 50s para infinite linear;
   }
-
-
 
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
   height: 100%;
   width: 100%;
   background-color: hsla(200,40%,30%,.4);
   color: white;
-  background-image:   
-    url('https://www.pngall.com/wp-content/uploads/2016/03/Cloud-PNG-2.png'),
+  background-image: 
     url('https://uncnews.unc.edu/wp-content/uploads/sites/933/2020/11/shutterstock_264839402-scaled.jpg');
   background-repeat: repeat-x;
   background-position: 
-    0 50%,
     0 20%;
   background-size: 
-    50%,
     2880px 1800px;
   animation: 50s para infinite linear;
   }
-
   @keyframes para {
     100% {
       background-position: 
@@ -52,15 +42,21 @@ body {
         -5000px 20%;
       }
   }
-
-
 code {
   font-family: 'Roboto', sans-serif;
 }
-
 #root{
   color: white;
 }
+li {
+  list-style: none;
+  margin: 20px;
+}
+a:link {
+  text-decoration: none;
+}
+
+
 
 /* NAVBAR STYLING */
 
@@ -97,11 +93,10 @@ code {
   padding-right: 30px;
   font-size: large;
 }
-
 #cryptoByte {
   font-family: 'Monoton', cursive;
   font-size:xx-large;
-  padding-left: 5%;
+  padding-left: 6%;
 }
 .navbar-nav {
   position:absolute;
@@ -112,6 +107,10 @@ code {
 }
 
 
+
+
+/* DASHBOARD STYLING  */
+
 #dashboard {
   display: flex;
   flex-direction: column;
@@ -120,67 +119,64 @@ code {
   /* background-color: #001244ef; */
   color: white;
   /* padding-bottom: 100%; */
-
 }
+
+#dashHeader {
+  padding-top: 4%;
+  padding-bottom: 7%;
+}
+.column {
+  font-family: 'Roboto', sans-serif;
+  /* float: center; */
+  flex: 50%
+}
+
+.row {
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  /* padding-bottom: 100%; */
+  /* text-align: center;
+  display: flex; */
+} 
+.allCoins {
+  overflow: auto;
+  height: 1000px;
+  flex: 50%;
+  
+}
+#button {
+  font-family: 'Roboto', sans-serif;
+  background-color: rgba(192, 192, 205, 0.601);
+  color:rgba(0, 0, 1, 0.683)
+}
+
+
+/* CONTACT PAGE STYLING */
 
 .col-sm-3 {
   text-align: center;
-  padding-top: 10%;
+  padding-top: 7%;
   font-size: small;
 }
 
 .contact {
+  font-family: 'Roboto', sans-serif;
   text-align: center;
   float: center;
-  padding-top: 5%;
+  padding-top: 4%;
   /* padding-bottom: 100%; */
   /* background-color: #001244ef; */
   color: white;
 }
 
+
+/* LANDING PAGE STYLING */
 #homepage {
   flex-direction: column;
   text-align: center;
   float: center;
   padding-top: 50px;
-  /* padding-bottom: 100%; */
-  /* background-color: #001244ef; */
   color: white;
-  /* background: linear-gradient(-45deg, #31353f, #1e2e61, #204755, #31584f);
-  background-size: 400% 400%;
-  animation: gradient 5s ease infinite;
-  height: 100vh;
-}
-
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  } */
-}
-
-.row {
-  padding-bottom: 100%;
-} 
-
-
-li {
-  list-style: none;
-}
-
-
-
-a:link {
-  text-decoration: none;
-}
-.row {
-  display: flex;
-}
-.column {
-  flex: 50%
+  font-family: 'Roboto', sans-serif;
+  font-size: medium;
 }
