--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,17 @@ html {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
-  background-color: hsla(200,40%,30%,.4);
+  background-color: hsla(200, 40%, 30%, .4);
   color: white;
-  background-image:   
+  background-image:
     url('https://uncnews.unc.edu/wp-content/uploads/sites/933/2020/11/shutterstock_264839402-scaled.jpg');
   background-repeat: repeat-x;
-  background-position: 
+  background-position:
     0 20%;
-  background-size: 
+  background-size:
     2880px 1800px;
   animation: 50s para infinite linear;
-  }
+}
 
 body {
   margin: 0;
@@ -24,34 +24,39 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
-  background-color: hsla(200,40%,30%,.4);
+  background-color: hsla(200, 40%, 30%, .4);
   color: white;
-  background-image: 
+  background-image:
     url('https://uncnews.unc.edu/wp-content/uploads/sites/933/2020/11/shutterstock_264839402-scaled.jpg');
   background-repeat: repeat-x;
-  background-position: 
+  background-position:
     0 20%;
-  background-size: 
+  background-size:
     2880px 1800px;
   animation: 50s para infinite linear;
+}
+
+@keyframes para {
+  100% {
+    background-position:
+      500px 50%,
+      -5000px 20%;
   }
-  @keyframes para {
-    100% {
-      background-position: 
-        500px 50%,
-        -5000px 20%;
-      }
-  }
+}
+
 code {
   font-family: 'Roboto', sans-serif;
 }
-#root{
+
+#root {
   color: white;
 }
+
 li {
   list-style: none;
   margin: 20px;
 }
+
 a:link {
   text-decoration: none;
 }
@@ -60,46 +65,55 @@ a:link {
 
 /* NAVBAR STYLING */
 
-.signOut{
+.signOut {
   padding: 7px;
   font-size: small;
 }
+
 .dashboard {
   padding: 7px;
   font-size: small;
 }
+
 .changepassword {
   padding: 7px;
   font-size: small;
 }
+
 .signup {
   padding: 7px;
   font-size: small;
 }
-.signin{
+
+.signin {
   padding: 7px;
   font-size: small;
 }
+
 .home {
   padding: 7px;
   font-size: small;
 }
+
 .contacts {
   padding: 7px;
   font-size: small;
 }
+
 .navbar-text-mr-2 {
   color: white;
   padding-right: 30px;
   font-size: large;
 }
+
 #cryptoByte {
   font-family: 'Monoton', cursive;
-  font-size:xx-large;
+  font-size: xx-large;
   padding-left: 6%;
 }
+
 .navbar-nav {
-  position:absolute;
+  position: absolute;
   right: 1%;
   float: right;
   justify-content: flex-end;
@@ -125,6 +139,7 @@ a:link {
   padding-top: 4%;
   padding-bottom: 7%;
 }
+
 .column {
   font-family: 'Roboto', sans-serif;
   /* float: center; */
@@ -137,17 +152,19 @@ a:link {
   /* padding-bottom: 100%; */
   /* text-align: center;
   display: flex; */
-} 
+}
+
 .allCoins {
   overflow: auto;
   height: 1000px;
   flex: 50%;
-  
+
 }
+
 #button {
   font-family: 'Roboto', sans-serif;
   background-color: rgba(192, 192, 205, 0.601);
-  color:rgba(0, 0, 1, 0.683)
+  color: rgba(0, 0, 1, 0.683)
 }
 
 
@@ -179,4 +196,78 @@ a:link {
   color: white;
   font-family: 'Roboto', sans-serif;
   font-size: medium;
+}
+
+#button {
+  display: inline-block;
+  padding: 0.3em 1.2em;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  color: #FFFFFF;
+  background-color: rgb(233, 112, 6);
+  text-align: center;
+  transition: all 0.2s;
+  font-size: 15px;
+}
+
+#button:hover {
+  background-color: #b16f36;
+}
+
+@media all and (max-width:30em) {
+  #button {
+    display: block;
+    margin: 0.2em auto;
+  }
+}
+
+.coinHeader {
+  font-size: 35px;
+  color: green;
+}
+
+.coinDiv {
+  display: flex;
+  justify-content: flex-start;
+  font-size: 22px;
+  border: 1px solid green;
+  text-align: center;
+  background-color:hsla(200, 40%, 30%, .4)
+}
+
+#allCoins {
+  text-align: center;
+}
+
+#coinRank {
+  width: 35px;
+  text-align: center;
+  line-height: 70px;
+}
+
+#coinName {
+  width: 200px;
+  text-align: center;
+  line-height: 70px;
+}
+
+#coinSymbol {
+  width: 125px;
+  text-align: center;
+  line-height: 70px;
+}
+
+#coinPrice {
+  width: 250px;
+  text-align: center;
+  line-height: 70px;
+}
+
+#coinButton {
+  text-align: center;
+  margin: 10px auto;
 }
