continued dashboard styling

--- a/src/index.css
+++ b/src/index.css
@@ -151,7 +151,7 @@ a:link {
   display: flex; */
 }
 
-#button {
+.button {
   display: inline-block;
   padding: 0.3em 1.2em;
   margin: 0 0.3em 0.3em 0;
@@ -167,15 +167,41 @@ a:link {
   font-size: 15px;
 }
 
-#button:hover {
+.button:hover {
+  background-color: #f56104;
+}
+
+.removeButton {
+  display: inline-block;
+  padding: 0.3em 1.2em;
+  margin: 0 0.3em 0.3em 50px;
+  border-radius: 2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  color: #FFFFFF;
+  background-color: red;
+  text-align: center;
+  transition: all 0.2s;
+  font-size: 15px;
+}
+
+.removeButton:hover {
   background-color: #f56104;
 }
 
 @media all and (max-width:30em) {
-  #button {
+  .button, .removeButton {
     display: block;
     margin: 0.2em auto;
   }
+}
+
+.removeButtonDiv {
+  height: 50px;
+  width: 75px;
+  background-color: red;
 }
 
 .coinHeader {
@@ -197,7 +223,7 @@ a:link {
 }
 
 #coinRank {
-  width: 85px;
+  width: 90px;
   text-align: center;
   line-height: 70px;
   background-color: #f56104
@@ -238,13 +264,26 @@ a:link {
 }
 
 .savedCoins {
-  height: 100px;
-  width: 300px;
-  background-color: lightblue;
+  height: 45px;
+  width: 500px;
+  background-color:hsla(200, 40%, 30%, .4);
+  border: 1px solid green;
   margin: 0 auto;
   text-align: center;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
 }
 
+.savedCoinItem {
+  margin: 0;
+  padding: 0;
+}
+
+.savedInfo {
+  color: rgba(7, 240, 26, 1);
+  display: block;
+}
 
 /* CONTACT PAGE STYLING */
 
