--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ html {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   background-color: hsla(200, 40%, 30%, .4);
   color: white;
